Closed Bug 1865582 Opened 2 years ago Closed 1 year ago

New wpt failures in /svg-aam/ [name/comp_host_language_label.html, role/roles-generic.html]

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: wpt-sync, Assigned: nlapre)

References

(Blocks 1 open bug)

Details

(Whiteboard: [wpt])

Attachments

(1 file)

Syncing wpt PR 43196 found new untriaged test failures in CI

Tests Affected

Firefox-only failures

  • /svg-aam/name/comp_host_language_label.html [wpt.fyi]
    • [xlink:title][href] > circle: FAIL
    • [xlink:title][href] > rect: FAIL
    • [xlink:title][href] > polygon: FAIL
    • [xlink:title][href] > g: FAIL
    • [xlink:title][xlink:href] > circle: FAIL
    • [xlink:title][xlink:href] > rect: FAIL
    • [xlink:title][xlink:href] > polygon: FAIL
    • [xlink:title][xlink:href] > g: FAIL

New Tests That Don't Pass

CI Results

Gecko CI (Treeherder)
GitHub PR Head

Notes

These updates will be on mozilla-central once bug 1865022 lands.

Note: this bug is for tracking fixing the issues and is not
owned by the wpt sync bot.

This bug is linked to the relevant tests by an annotation in
https://github.com/web-platform-tests/wpt-metadata. These annotations
can be edited using the wpt interop dashboard
https://jgraham.github.io/wptdash/

If this bug is split into multiple bugs, please also update the
annotations, otherwise we are unable to track which wpt issues are
already triaged. Resolving as duplicate or closing this issue should
be cause the bot to automatically update or remove the annotation.

Severity: -- → S3

The failures in /svg-aam/name/comp_host_language_label.html are because we don't support xlink:title. There's some discussion and partial implementation regarding this on the patch in bug 824320, but we'll need something more broadly applicable to fix this.

The /svg-aam/role/roles-generic.html el-image failure is discussed in https://github.com/w3c/svg-aam/issues/32#issuecomment-1849286821.

Blocks: a11y-wpt
Component: SVG → Disability Access APIs

This revision implements HTMLLinkAccessible::NativeName, which, if the element
is present in an SVG context, checks the xlink:title attribute for the name, as
required by the accessible name specification. This is not a full implementation
of xlink:title, which has other implications for image tags. This revision also
removes eight expected failures from the relevant web platform test meta file.

Assignee: nobody → nlapre
Status: NEW → ASSIGNED
Pushed by nlapre@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/310379955c22 Include xlink:title in svg link name computation, r=Jamie
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: