Bug 1865582: Include xlink:title in svg link name computation, r=Jamie

This revision implements HTMLLinkAccessible::NativeName, which, if the element
is present in an SVG context, checks the xlink:title attribute for the name, as
required by the accessible name specification. This revision also removes eight
expected failures from the relevant web platform test meta file.

Differential Revision: https://phabricator.services.mozilla.com/D203031